@@ -68,8 +68,7 @@ function q = prctile (x, p = [], dim)
     ## Find the first non-singleton dimension.
     (dim = find (sz > 1, 1)) || (dim = 1);
   else
-    if (!(isscalar (dim) && dim == fix (dim))
-        || !(1 <= dim && dim <= nd))
+    if (!(isscalar (dim) && dim == fix (dim)) || !(1 <= dim))
       error ("prctile: DIM must be an integer and a valid dimension");
     endif
   endif
@@ -179,6 +178,8 @@ endfunction
 %! qa = [0.1270; 0.2041; 0.6437; 0.6477; 0.9322];
 %! assert (q, qa, tol);
 
+%!assert (prctile ([1:10], 1, 3), [1:10])
+
 ## Test input validation
 %!error <Invalid call> prctile ()
 %!error prctile (['A'; 'B'], 10)
@@ -186,4 +187,3 @@ endfunction
 %!error prctile (1:10, ones (2,2))
 %!error prctile (1, 1, 1.5)
 %!error prctile (1, 1, 0)
-%!error prctile (1, 1, 3)
