@@ -176,6 +176,9 @@ been added which prints a warning when Octave's parser recognizes valid
 Matlab code, but for which Octave does not yet implement the
 functionality.  By default, this warning is enabled.
 
+- The functions `quantile` and `prctile` now permit operating on dimensions
+greater than `ndims(x)`.
+
 ### Alphabetical list of new functions added in Octave 7
 
 * `cospi`
